Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/miranda/T4666866.out
T4666866.java:10:1: compiler.err.does.not.override.abstract: t, run(), java.lang.Runnable
1 error
